cabal-version:   3.0
name:            bus-tracker
version:         0.1.0.0
synopsis:        Bus tracker app
description:     Bus tracker and ranking app
license:         MIT
license-file:    LICENSE
author:          shootingstar
maintainer:      jinhung.c@gmail.com
category:        Web
build-type:      Simple
extra-doc-files: README.md

common commons
  ghc-options: -Wall -threaded

executable bus-tracker
  import:             commons
  main-is:            Main.hs
  default-extensions: StrictData
  build-depends:
    , base
    , bus-tracker:bus-tracker-internal

  hs-source-dirs:     app
  default-language:   GHC2024

library bus-tracker-internal
  import:             commons
  exposed-modules:    Bus.Main
  other-modules:
    Bus.App
    Bus.Logging

  default-extensions: StrictData
  build-depends:
    , aeson                 >=2.3.0    && <2.4
    , async                 >=2.2.6    && <2.3
    , base                  >=4.20.2.0 && <5
    , bytestring            >=0.12.2   && <0.13
    , containers            >=0.7      && <0.8
    , exceptions            >=0.10.9   && <0.11
    , file-io               >=0.2.0    && <0.3
    , filepath              >=1.5.4    && <1.6
    , monad-logger          >=0.3.42   && <0.4
    , mtl                   >=2.3.1    && <2.4
    , process               >=1.6.26   && <1.7
    , resource-pool         >=0.5.0    && <0.6
    , stm                   >=2.5.3    && <2.6
    , text                  >=2.1.3    && <2.2
    , time                  >=1.12.2   && <1.13
    , unordered-containers  >=0.2.21   && <0.3

  hs-source-dirs:     lib
  default-language:   GHC2024
