cabal-version:   3.0
name:            bus-tracker
version:         0.1.0.0
synopsis:        Bus tracker app
description:     Bus tracker and ranking app
license:         MIT
license-file:    LICENSE
author:          shootingstar
maintainer:      jinhung.c@gmail.com
category:        Web
build-type:      Simple
extra-doc-files: README.md

common commons
  ghc-options: -Wall -threaded

executable bus-tracker
  import:             commons
  main-is:            Main.hs
  default-extensions: StrictData
  build-depends:
    , base                              >=4.20.2.0 && <5
    , bus-tracker:bus-tracker-internal

  hs-source-dirs:     app
  default-language:   GHC2024

library bus-tracker-internal
  import:             commons
  exposed-modules:    Bus.Main
  other-modules:
    Bus.App
    Bus.Auth
    Bus.Exception
    Bus.Logging
    Bus.Rerefined.Predicate
    Bus.Servant
    Bus.Servant.Auth
    Bus.Web.User.Api

  default-extensions: StrictData
  build-depends:
    , aeson                 >=2.2.5    && <2.3
    , async                 >=2.2.6    && <2.3
    , base                  >=4.20.2.0 && <5
    , bytestring            >=0.12.2   && <0.13
    , containers            >=0.7      && <0.8
    , crypton-asn1-types    >=0.4.1    && <0.5
    , cryptostore           >=0.5.0.0  && <0.6
    , exceptions            >=0.10.9   && <0.11
    , file-io               >=0.2.0    && <0.3
    , filepath              >=1.5.4    && <1.6
    , jose                  >=0.12     && <0.13
    , lens                  >=5.3.6    && <5.4
    , monad-logger          >=0.3.42   && <0.4
    , monad-time            >=0.4.0    && <0.5
    , mtl                   >=2.3.1    && <2.4
    , optparse-applicative  >=0.19.0   && <0.20
    , process               >=1.6.26   && <1.7
    , rerefined             >=0.8.0    && <0.9
    , resource-pool         >=0.5.0    && <0.6
    , servant-server        >=0.20.3   && <0.21
    , stm                   >=2.5.3    && <2.6
    , text                  >=2.1.3    && <2.2
    , text-builder-linear   >=0.1.3    && <0.2
    , time                  >=1.12.2   && <1.13
    , unordered-containers  >=0.2.21   && <0.3
    , wai                   >=3.2.4    && <3.3
    , warp                  >=3.4.13   && <3.5

  hs-source-dirs:     lib
  default-language:   GHC2024
